--- a/x01.Weiqi/x01.Weiqi.csproj
+++ b/x01.Weiqi/x01.Weiqi.csproj
@@ -89,8 +89,12 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Boards\AiBoard.cs" />
-    <Compile Include="Boards\Board.Mesh.cs" />
-    <Compile Include="Boards\Board.Think.cs" />
+    <Compile Include="Boards\Board.Mesh.cs">
+		<DependentUpon>Board.xaml</DependentUpon>
+	</Compile>
+    <Compile Include="Boards\Board.Think.cs">
+		<DependentUpon>Board.xaml</DependentUpon>
+	</Compile>
     <Compile Include="Boards\Board.xaml.cs">
       <DependentUpon>Board.xaml</DependentUpon>
     </Compile>
@@ -111,6 +115,9 @@
     <Compile Include="Windows\SaveStepWindow.xaml.cs">
       <DependentUpon>SaveStepWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\WaitWindow.xaml.cs">
+	  <DependentUpon>WaitWindow.xaml</DependentUpon>
+	</Compile>
     <Page Include="Boards\Board.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -143,6 +150,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Windows\WaitWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -163,7 +174,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="App.Config" />
-    <Compile Include="Boards\Board.Shape.cs" />
+    <Compile Include="Boards\Board.Shape.cs">
+		<DependentUpon>Board.xaml</DependentUpon>
+	</Compile>
     <None Include="Properties\DataSources\x01.Weiqi.Model.DbStepEntities.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
