--- a/x01.Weiqi/x01.Weiqi.csproj
+++ b/x01.Weiqi/x01.Weiqi.csproj
@@ -90,11 +90,14 @@
     </ApplicationDefinition>
     <Compile Include="Boards\AiBoard.cs" />
     <Compile Include="Boards\Board.Mesh.cs">
+      <DependentUpon>Board.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Boards\Board.Pattern.cs">
 		<DependentUpon>Board.xaml</DependentUpon>
 	</Compile>
     <Compile Include="Boards\Board.Think.cs">
-		<DependentUpon>Board.xaml</DependentUpon>
-	</Compile>
+      <DependentUpon>Board.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Boards\Board.xaml.cs">
       <DependentUpon>Board.xaml</DependentUpon>
     </Compile>
@@ -116,8 +119,8 @@
       <DependentUpon>SaveStepWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\WaitWindow.xaml.cs">
-	  <DependentUpon>WaitWindow.xaml</DependentUpon>
-	</Compile>
+      <DependentUpon>WaitWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="Boards\Board.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -175,8 +178,8 @@
     </EmbeddedResource>
     <None Include="App.Config" />
     <Compile Include="Boards\Board.Shape.cs">
-		<DependentUpon>Board.xaml</DependentUpon>
-	</Compile>
+      <DependentUpon>Board.xaml</DependentUpon>
+    </Compile>
     <None Include="Properties\DataSources\x01.Weiqi.Model.DbStepEntities.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
