--- a/x01.Weiqi/x01.Weiqi.csproj
+++ b/x01.Weiqi/x01.Weiqi.csproj
@@ -93,8 +93,8 @@
       <DependentUpon>Board.xaml</DependentUpon>
     </Compile>
     <Compile Include="Boards\Board.Pattern.cs">
-		<DependentUpon>Board.xaml</DependentUpon>
-	</Compile>
+      <DependentUpon>Board.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Boards\Board.Think.cs">
       <DependentUpon>Board.xaml</DependentUpon>
     </Compile>
@@ -172,6 +172,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Boards\Board.Layout.cs">
+		<DependentUpon>Board.xaml</DependentUpon>
+	</Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
