--- a/x01.Weiqi/x01.Weiqi.csproj
+++ b/x01.Weiqi/x01.Weiqi.csproj
@@ -104,6 +104,9 @@
     <Compile Include="Boards\ForBoard.cs" />
     <Compile Include="Boards\GameBoard.cs" />
     <Compile Include="Boards\StepBoard.cs" />
+    <Compile Include="Core\AiLayout.cs" />
+    <Compile Include="Core\Helper.cs" />
+    <Compile Include="Core\AiShape.cs" />
     <Compile Include="Models\Record.cs" />
     <Compile Include="Models\WeiqiContext.cs" />
     <Compile Include="Windows\AboutPage.xaml.cs">
