--- a/x01.Weiqi/x01.Weiqi.csproj
+++ b/x01.Weiqi/x01.Weiqi.csproj
@@ -92,9 +92,6 @@
     <Compile Include="Boards\Board.Mesh.cs">
       <DependentUpon>Board.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Boards\Board.Pattern.cs">
-      <DependentUpon>Board.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Boards\Board.Think.cs">
       <DependentUpon>Board.xaml</DependentUpon>
     </Compile>
@@ -106,7 +103,7 @@
     <Compile Include="Boards\StepBoard.cs" />
     <Compile Include="Core\AiThink.cs" />
     <Compile Include="Core\Helper.cs" />
-    <Compile Include="Core\AiShape.cs" />
+    <Compile Include="Core\ShapeThink.cs" />
     <Compile Include="Core\IThink.cs" />
     <Compile Include="Models\Record.cs" />
     <Compile Include="Models\WeiqiContext.cs" />
@@ -176,9 +173,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Boards\Board.Layout.cs">
-      <DependentUpon>Board.xaml</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -233,6 +227,7 @@
     <Content Include="d.mp3">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Models\dbo.Records.data.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
